--- a/pages/desayunos.html
+++ b/pages/desayunos.html
@@ -10,104 +10,225 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary barra">
+        <div class="container-fluid">
+          <a href="../index.html">
+            <img
+              class="logo-inicio"
+              src="../assets/logo.png"
+              alt="logo piacere"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse barra"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Carta
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Desayunos / meriendas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./platos.html">Platos</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./bebidas.html">Bebidas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./nuestrahist.html"
+                  >Nuestra historia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1 class="subt">Desayunos/meriendas</h1>
+        <div class="foto-platos">
+          <img src="../assets/tiramisu.jpg" alt="tiramisu italiano" />
+          <img src="../assets/cafe.jpg" alt="cafe de especialidad" />
+          <img src="../assets/advocado.jpg" alt="advocado Toast" />
+        </div>
+      </section>
+      <section>
+          <h2 class="opciones">Bebidas</h2>
+          <ul>
+            <li class="lista">
+              <strong>Caffè Espresso:</strong> Café espresso italiano
+              tradicional.
+            </li>
+            <li class="lista">
+              <strong>Cappuccino:</strong> Espresso con leche vaporizada y
+              espuma.
+            </li>
+            <li class="lista">
+              <strong>Latte Macchiato:</strong> Leche caliente con un toque de
+              espresso.
+            </li>
+            <li class="lista">
+              <strong>Succo d’Arancia Fresca:</strong> Zumo de naranja recién
+              exprimido.
+            </li>
+            <li class="lista">
+              <strong>Acqua Minerale:</strong> Agua mineral con o sin gas.
+            </li>
+            <li class="lista">
+              <strong>Tè al Limone:</strong> Té negro con limón.
+            </li>
+            <li class="lista"><strong>Caffè Latte:</strong> Café con leche.</li>
+            <li class="lista">
+              <strong>Cioccolata Calda:</strong> Chocolate caliente espeso al
+              estilo italiano.
+            </li>
+            <li class="lista"><strong>Limonata:</strong> Limonada fresca.</li>
+            <li class="lista">
+              <strong>San Pellegrino:</strong> Refrescos de sabores italianos
+              como naranja, limón y granada.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2 class="opciones">Para acompañar</h2>
+          <ul>
+            <li class="sub-item">Opciones Clásicas</li>
+            <li class="lista">
+              <strong>Cornetto:</strong> Croissant italiano relleno de crema,
+              mermelada o chocolate.
+            </li>
+            <li class="lista">
+              <strong>Brioche con chocolate:</strong> Brioche suave relleno de
+              chocolate, una delicia siciliana.
+            </li>
+            <li class="lista">
+              <strong>Pane e Marmellata:</strong> Pan fresco con mermelada
+              casera.
+            </li>
+            <li class="lista">
+              <strong>Yogurt e Miele:</strong> Yogur natural con miel y frutas
+              frescas.
+            </li>
+            <li class="sub-item">Salados</li>
+            <li class="lista">
+              <strong>Bruschetta al Pomodoro:</strong> Pan tostado con tomate
+              fresco, ajo, albahaca y aceite de oliva.
+            </li>
+            <li class="lista">
+              <strong>Tagliere di Formaggi e Salumi:</strong> Tabla de quesos y
+              embutidos italianos, servida con pan artesanal.
+            </li>
+            <li class="lista">
+              <strong>Insalata Caprese:</strong> Rodajas de tomate, mozzarella
+              fresca, albahaca, aceite de oliva y balsámico.
+            </li>
+            <li class="lista">
+              <strong>Focaccia:</strong> Pan focaccia con romero, sal marina y
+              aceite de oliva.
+            </li>
+            <li class="lista">
+              <strong>Frittata:</strong> Tortilla italiana con verduras, queso y
+              hierbas frescas.
+            </li>
+            <li class="lista">
+              <strong>Panino con Prosciutto e Formaggio:</strong> Sándwich de
+              jamón serrano y queso en pan ciabatta.
+            </li>
+            <li class="lista">
+              <strong>Uova al Pomodoro:</strong> Huevos escalfados en salsa de
+              tomate con albahaca y parmesano.
+            </li>
+            <li class="lista">
+              <strong>Avocado Toast all’Italiana:</strong> Tostada de aguacate
+              con tomates cherry, huevo, albahaca y un toque de aceite de oliva.
+            </li>
+            <li class="sub-item">Dulces</li>
+            <li class="lista">
+              <strong>Tiramisù:</strong> Capas de bizcocho empapado en café,
+              mascarpone y cacao.
+            </li>
+            <li class="lista">
+              <strong>Cannoli Siciliani:</strong> Tubos de masa crujiente
+              rellenos de ricotta dulce y trozos de chocolate.
+            </li>
+            <li class="lista">
+              <strong>Panna Cotta:</strong> Flan de nata suave con coulis de
+              frutas del bosque.
+            </li>
+            <li class="lista">
+              <strong>Torta della Nonna:</strong> Tarta de crema pastelera con
+              piñones y almendras.
+            </li>
+            <li class="lista">
+              <strong>Gelato Artigianale:</strong> Helado artesanal con varios
+              sabores a elegir.
+            </li>
+          </ul>
+      </section>
+    </main>
+    <footer class="footer-pia">
+      <div>
+        <ul class="redes">
+          <a href="https://www.whatsapp.com"></a>
+          <li>
+            <a href="https://www.whatsapp.com"
+              ><img src="../assets/whatsapp.png" alt="logo whatsapp"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com"
+              ><img src="../assets/facebook.png" alt="logo facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagam.com"
+              ><img src="../assets/instagram.png" alt="logo instagram" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script
-      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary barra" >
-            <div class="container-fluid">
-                <a href="../index.html">
-              <img class="logo-inicio" src="../assets/logo.png" alt="logo piacere">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </a>
-              </button>
-              <div class="collapse navbar-collapse barra" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Carta
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Desayunos /meriendas</a></li>
-                          <li><a class="dropdown-item" href="./platos.html">Platos</a></li>
-                          <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
-                          <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
-                        </ul>
-                      </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./nuestrahist.html">Nuestra historia</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-    
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <body class="contenido">
-      <h1 class="subt">Desayunos/meriendas</h1>
-      <div class="foto-platos">
-        <img  src="../assets/tiramisu.jpg" alt="tiramisu italiano">
-        <img  src="../assets/cafe.jpg" alt="cafe de especialidad">
-        <img  src="../assets/advocado.jpg" alt="advocado Toast">
-      </div>
-      <div>
-        <ul class="platos-list">
-        <ul class="opciones">Bebidas</ul>
-<li class="lista"> <strong>Caffè Espresso:</strong> Café espresso italiano tradicional.</li>
-<li class="lista"><strong>Cappuccino:</strong> Espresso con leche vaporizada y espuma.</li>
-<li class="lista"><strong>Latte Macchiato:</strong> Leche caliente con un toque de espresso.</li>
-<li class="lista"><strong>Succo d’Arancia Fresca:</strong> Zumo de naranja recién exprimido.</li>
-<li class="lista"><strong>Acqua Minerale:</strong> Agua mineral con o sin gas.</li>
-<li class="lista"><strong>Tè al Limone:</strong> Té negro con limón.</li>
-<li class="lista"><strong>Caffè Latte:</strong> Café con leche.</li>
-<li class="lista"><strong>Cioccolata Calda:</strong> Chocolate caliente espeso al estilo italiano.</li>
-<li class="lista"><strong>Limonata:</strong> Limonada fresca.</li>
-<li class="lista"><strong>San Pellegrino:</strong> Refrescos de sabores italianos como naranja, limón y granada.</li>
-<ul class="opciones">Para acompañar</ul>
-<li class="sub-item">Opciones Clásicas</li>
-<li class="lista"><strong>Cornetto:</strong> Croissant italiano relleno de crema, mermelada o chocolate. </li>
-<li class="lista"><strong>Brioche con chocolate:</strong> Brioche suave relleno de chocolate, una delicia siciliana.</li>
-<li class="lista"><strong>Pane e Marmellata:</strong> Pan fresco con mermelada casera.</li>
-<li class="lista"><strong>Yogurt e Miele:</strong> Yogur natural con miel y frutas frescas.</li>
-<li class="sub-item">Salados</li>
-<li class="lista"><strong>Bruschetta al Pomodoro:</strong> Pan tostado con tomate fresco, ajo, albahaca y aceite de oliva.</li>
-<li class="lista"><strong>Tagliere di Formaggi e Salumi:</strong> Tabla de quesos y embutidos italianos, servida con pan artesanal.</li>
-<li class="lista"><strong>Insalata Caprese:</strong> Rodajas de tomate, mozzarella fresca, albahaca, aceite de oliva y balsámico.</li>
-<li class="lista"><strong>Focaccia:</strong> Pan focaccia con romero, sal marina y aceite de oliva.</li>
-<li class="lista"><strong>Frittata:</strong> Tortilla italiana con verduras, queso y hierbas frescas.</li>
-<li class="lista"><strong>Panino con Prosciutto e Formaggio:</strong> Sándwich de jamón serrano y queso en pan ciabatta.</li>
-<li class="lista"><strong>Uova al Pomodoro:</strong> Huevos escalfados en salsa de tomate con albahaca y parmesano.</li>
-<li class="lista"><strong>Avocado Toast all’Italiana:</strong> Tostada de aguacate con tomates cherry, huevo, albahaca y un toque de aceite de oliva.</li>
-<li class="sub-item">Dulces</li>
-<li class="lista"><strong>Tiramisù:</strong> Capas de bizcocho empapado en café, mascarpone y cacao.</li>
-<li class="lista"><strong>Cannoli Siciliani:</strong> Tubos de masa crujiente rellenos de ricotta dulce y trozos de chocolate.</li>
-<li class="lista"><strong>Panna Cotta:</strong> Flan de nata suave con coulis de frutas del bosque.</li>
-<li class="lista"><strong>Torta della Nonna:</strong> Tarta de crema pastelera con piñones y almendras.</li>
-<li class="lista"><strong>Gelato Artigianale:</strong> Helado artesanal con varios sabores a elegir.</li>
-</ul>
-      </div>
-
-    </body>
-    <footer class="footer-pia">
-      <div>
-        <ul class="redes">
-          <a href="https://www.whatsapp.com"></a> 
-          <li> 
-            <a href="https://www.whatsapp.com"><img src="../assets/whatsapp.png" alt="logo whatsapp"></a></li>
-          <li> 
-            <a href="https://www.facebook.com"><img  src="../assets/facebook.png" alt="logo facebook"> </a> </li>
-          <li>
-            <a href="https://www.instagam.com"><img src="../assets/instagram.png" alt="logo instagram"> </a></li>
-        </ul>
-      </div>
-    </footer>
-    </html>
+  </body>
+</html>
