--- a/pages/nuestrahist.html
+++ b/pages/nuestrahist.html
@@ -10,77 +10,152 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary barra">
+        <div class="container-fluid">
+          <a href="../index.html">
+            <img
+              class="logo-inicio"
+              src="../assets/logo.png"
+              alt="logo piacere"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse barra"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Carta
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="./desayunos.html"
+                      >Desayunos / meriendas</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./platos.html">Platos</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./bebidas.html">Bebidas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Nuestra historia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1 class="subt">
+          Piacere - Sabores auténticos, historias compartidas
+        </h1>
+        <div class="foto-platos">
+          <img
+            class="foto-platos"
+            src="../assets/manos.jpg"
+            alt="manos de abuela y nieta amasando"
+          />
+          <img src="../assets/restaurant.jpg" alt="restaurante por dentro" />
+        </div>
+        <div class="historia">
+          <p class="texto">
+            En "Piacere" te invitamos a disfrutar de una experiencia
+            gastronómica que trasciende generaciones.
+          </p>
+          <p class="texto">
+            Fundado por abuelos inmigrantes que trajeron consigo las ricas
+            tradiciones culinarias de Italia, nuestro restaurante es un homenaje
+            a sus sueños, trabajo arduo y el amor por la buena comida.
+          </p>
+          <p class="texto">
+            Cada plato en nuestro menú es una obra maestra, elaborada con
+            recetas ancestrales transmitidas de generación en generación. Desde
+            nuestras pastas frescas hechas a mano hasta nuestras salsas
+            cocinadas a fuego lento, cada bocado es un viaje a la auténtica
+            cocina italiana.
+          </p>
+          <p class="texto">
+            En "Piacere" no solo servimos comida, sino también historias.
+            Nuestras paredes están adornadas con fotografías y recuerdos que
+            narran la travesía de nuestros fundadores, quienes dejaron su hogar
+            en busca de un futuro mejor y encontraron en la gastronomía un
+            puente entre culturas.
+          </p>
+          <p class="texto">
+            Nuestro acogedor ambiente familiar te hará sentir como en casa, ya
+            sea que vengas a disfrutar de una cena romántica, una celebración
+            especial o una comida casual. Aquí, cada cliente es recibido como
+            parte de nuestra familia, con calidez y hospitalidad genuina.
+          </p>
+          <p class="texto">
+            Ven y descubre por qué "Piacere" es más que un restaurante; es un
+            rincón donde los sabores de Italia y la pasión de nuestros abuelos
+            se unen para crear momentos inolvidables.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-pia">
+      <div>
+        <ul class="redes">
+          <a href="https://www.whatsapp.com"></a>
+          <li>
+            <a href="https://www.whatsapp.com"
+              ><img src="../assets/whatsapp.png" alt="logo whatsapp"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com"
+              ><img src="../assets/facebook.png" alt="logo facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagam.com"
+              ><img src="../assets/instagram.png" alt="logo instagram" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script
-      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-  <body class="contenido">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary barra" >
-            <div class="container-fluid">
-                <a href="../index.html">
-              <img class="logo-inicio" src="../assets/logo.png" alt="logo piacere">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </a>
-              </button>
-              <div class="collapse navbar-collapse barra" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Carta
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="./desayunos.html">Desayunos /meriendas</a></li>
-                          <li><a class="dropdown-item" href="./platos.html">Platos</a></li>
-                          <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
-                          <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
-                        </ul>
-                      </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Nuestra historia</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-    
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <body>
-        <h1 class="subt"> Piacere - Sabores auténticos, historias compartidas</h1>
-        <div class="foto-platos">
-            <img  class="foto-platos" src="../assets/manos.jpg" alt="manos de abuela y nieta amasando">
-            <img src="../assets/restaurant.jpg" alt="restaurante por dentro">
-        </div>
-        <div  class="historia">
-            <p class="texto"> En "Piacere" te invitamos a disfrutar de una experiencia gastronómica que trasciende generaciones.</p>
-            <p class="texto"> Fundado por abuelos inmigrantes que trajeron consigo las ricas tradiciones culinarias de Italia, nuestro restaurante es un homenaje a sus sueños, trabajo arduo y el amor por la buena comida. </p>
-            <p class="texto">Cada plato en nuestro menú es una obra maestra, elaborada con recetas ancestrales transmitidas de generación en generación. 
-    Desde nuestras pastas frescas hechas a mano hasta nuestras salsas cocinadas a fuego lento, cada bocado es un viaje a la auténtica cocina italiana. </p>
-            <p class="texto">En "Piacere" no solo servimos comida, sino también historias. Nuestras paredes están adornadas con fotografías y recuerdos que narran la travesía de nuestros fundadores, quienes dejaron su hogar en busca de un futuro mejor y encontraron en la gastronomía un puente entre culturas. </p>
-            <p class="texto">Nuestro acogedor ambiente familiar te hará sentir como en casa, ya sea que vengas a disfrutar de una cena romántica, una celebración especial o una comida casual. 
-Aquí, cada cliente es recibido como parte de nuestra familia, con calidez y hospitalidad genuina. </p>
-            <p class="texto">Ven y descubre por qué "Piacere" es más que un restaurante; es un rincón donde los sabores de Italia y la pasión de nuestros abuelos se unen para crear momentos inolvidables.</p>
-        </div>
-    </body>
-    <footer class="footer-pia">
-        <div>
-          <ul class="redes">
-            <a href="https://www.whatsapp.com"></a> 
-            <li> 
-              <a href="https://www.whatsapp.com"><img src="../assets/whatsapp.png" alt="logo whatsapp"></a></li>
-            <li> 
-              <a href="https://www.facebook.com"><img  src="../assets/facebook.png" alt="logo facebook"> </a> </li>
-            <li>
-              <a href="https://www.instagam.com"><img src="../assets/instagram.png" alt="logo instagram"> </a></li>
-          </ul>
-        </div>
-      </footer>
-      </html>
+  </body>
+</html>
