--- a/pages/platos.html
+++ b/pages/platos.html
@@ -10,93 +10,193 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary barra" >
-            <div class="container-fluid">
-                <a href="../index.html">
-              <img class="logo-inicio" src="../assets/logo.png" alt="logo piacere">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </a>
-              </button>
-              <div class="collapse navbar-collapse barra" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Carta
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="./desayunos.html">Desayunos /meriendas</a></li>
-                          <li><a class="dropdown-item" href="#">Platos</a></li>
-                          <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
-                          <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
-                        </ul>
-                      </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./nuestrahist.html">Nuestra historia</a>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary barra">
+        <div class="container-fluid">
+          <a href="../index.html">
+            <img
+              class="logo-inicio"
+              src="../assets/logo.png"
+              alt="logo piacere"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse barra"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Carta
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="./desayunos.html"
+                      >Desayunos / meriendas</a
+                    >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  <li>
+                    <a class="dropdown-item" href="#">Platos</a>
                   </li>
-    
+                  <li>
+                    <a class="dropdown-item" href="./bebidas.html">Bebidas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                  </li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./nuestrahist.html"
+                  >Nuestra historia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-  <body class="contenido">
-    <h1 class="subt">Platos</h1>
-    <div class="foto-platos">
-      <img  src="../assets/pastas.jpeg" alt="pasta estilo italiana">
-      <img  src="../assets/ensalada.jpg" alt="ensalada gourmet">
-      <img  src="../assets/sopagourmet.jpg" alt="sopa gourmet">
-    </div>
-    <div>
-        <ul class="platos-list">
-        <ul class="opciones">Entrantes </ul>
-        <li class="lista"> <strong>Bruschetta al Pomodoro:</strong>  Pan tostado con tomate fresco, ajo, albahaca y aceite de oliva. </li>
-        <li class="lista"><strong>Misto:</strong> Selección de embutidos italianos, quesos, aceitunas y vegetales en escabeche.</li>
-        <ul class="opciones">Sopas y Ensaladas</ul>
-        <li class="lista"> <strong> Minestrone:</strong> Sopa clásica de verduras con pasta pequeña. </li>
-        <li class="lista"><strong>Insalata Caprese:</strong> Rodajas de tomate, mozzarella fresca, albahaca, y un toque de aceite de oliva y balsámico. </li>
-       <ul class="opciones">Pastas Clásicas </ul>
-        <li class="lista"> <strong>Spaghetti alla Carbonara:</strong> Espaguetis con salsa de huevo, panceta, queso pecorino y pimienta negra. </li>
-        <li class="lista"><strong>Fettuccine Alfredo:</strong> Fettuccine en una cremosa salsa de mantequilla y parmesano.</li>
-        <li class="lista"><strong>Penne Arrabbiata:</strong> Penne en una salsa de tomate picante con ajo y perejil.</li>
-        <li class="lista"><strong>Lasagna Bolognese:</strong> Capas de pasta con ragú de carne, bechamel y queso gratinado. </li>
-        <ul class="opciones">Pastas Especiales</ul>
-        <li class="lista"><strong>Ravioli di Ricotta e Spinaci:</strong> Raviolis rellenos de ricota y espinacas, servidos con salsa de mantequilla y salvia.</li>
-        <li class="lista"><strong>Tagliatelle al Tartufo:</strong> Tagliatelle con salsa de crema y trufa negra. </li>
-        <li class="lista"><strong>Gnocchi alla Sorrentina:</strong> Ñoquis de papa con salsa de tomate, albahaca y mozzarella fundida.</li>
-        <li class="lista"><strong>Pappardelle al Ragù di Cinghiale:</strong> Pappardelle con ragú de jabalí, una especialidad toscana.</li>
-        <ul class="opciones">Opciones Vegetarianas</ul>
-        <li class="lista"><strong>Spaghetti Aglio e Olio:</strong> Espaguetis con ajo, aceite de oliva, peperoncino y perejil.</li>
-        <li class="lista"><strong>Penne al Pesto:</strong> Penne con salsa de pesto genovés, piñones y parmesano. </li>
-        <li class="lista"><strong>Linguine alle Verdure:</strong> Linguine con una mezcla de verduras frescas salteadas y un toque de ajo. </li>
-      </ul>
-    </div>
-
+    <main>
+      <section>
+        <h1 class="subt">Platos</h1>
+        <div class="foto-platos">
+          <img src="../assets/pastas.jpeg" alt="pasta estilo italiana" />
+          <img src="../assets/ensalada.jpg" alt="ensalada gourmet" />
+          <img src="../assets/sopagourmet.jpg" alt="sopa gourmet" />
+        </div>
+        <div>
+          <ul class="platos-list">
+            <ul class="opciones">
+              Entrantes
+            </ul>
+            <li class="lista">
+              <strong>Bruschetta al Pomodoro:</strong> Pan tostado con tomate
+              fresco, ajo, albahaca y aceite de oliva.
+            </li>
+            <li class="lista">
+              <strong>Misto:</strong> Selección de embutidos italianos, quesos,
+              aceitunas y vegetales en escabeche.
+            </li>
+            <ul class="opciones">
+              Sopas y Ensaladas
+            </ul>
+            <li class="lista">
+              <strong> Minestrone:</strong> Sopa clásica de verduras con pasta
+              pequeña.
+            </li>
+            <li class="lista">
+              <strong>Insalata Caprese:</strong> Rodajas de tomate, mozzarella
+              fresca, albahaca, y un toque de aceite de oliva y balsámico.
+            </li>
+            <ul class="opciones">
+              Pastas Clásicas
+            </ul>
+            <li class="lista">
+              <strong>Spaghetti alla Carbonara:</strong> Espaguetis con salsa de
+              huevo, panceta, queso pecorino y pimienta negra.
+            </li>
+            <li class="lista">
+              <strong>Fettuccine Alfredo:</strong> Fettuccine en una cremosa
+              salsa de mantequilla y parmesano.
+            </li>
+            <li class="lista">
+              <strong>Penne Arrabbiata:</strong> Penne en una salsa de tomate
+              picante con ajo y perejil.
+            </li>
+            <li class="lista">
+              <strong>Lasagna Bolognese:</strong> Capas de pasta con ragú de
+              carne, bechamel y queso gratinado.
+            </li>
+            <ul class="opciones">
+              Pastas Especiales
+            </ul>
+            <li class="lista">
+              <strong>Ravioli di Ricotta e Spinaci:</strong> Raviolis rellenos
+              de ricota y espinacas, servidos con salsa de mantequilla y salvia.
+            </li>
+            <li class="lista">
+              <strong>Tagliatelle al Tartufo:</strong> Tagliatelle con salsa de
+              crema y trufa negra.
+            </li>
+            <li class="lista">
+              <strong>Gnocchi alla Sorrentina:</strong> Ñoquis de papa con salsa
+              de tomate, albahaca y mozzarella fundida.
+            </li>
+            <li class="lista">
+              <strong>Pappardelle al Ragù di Cinghiale:</strong> Pappardelle con
+              ragú de jabalí, una especialidad toscana.
+            </li>
+            <ul class="opciones">
+              Opciones Vegetarianas
+            </ul>
+            <li class="lista">
+              <strong>Spaghetti Aglio e Olio:</strong> Espaguetis con ajo,
+              aceite de oliva, peperoncino y perejil.
+            </li>
+            <li class="lista">
+              <strong>Penne al Pesto:</strong> Penne con salsa de pesto genovés,
+              piñones y parmesano.
+            </li>
+            <li class="lista">
+              <strong>Linguine alle Verdure:</strong> Linguine con una mezcla de
+              verduras frescas salteadas y un toque de ajo.
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-pia">
+      <div>
+        <ul class="redes">
+          <a href="https://www.whatsapp.com"></a>
+          <li>
+            <a href="https://www.whatsapp.com"
+              ><img src="../assets/whatsapp.png" alt="logo whatsapp"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com"
+              ><img src="../assets/facebook.png" alt="logo facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagam.com"
+              ><img src="../assets/instagram.png" alt="logo instagram" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <footer class="footer-pia">
-    <div>
-      <ul class="redes">
-        <a href="https://www.whatsapp.com"></a> 
-        <li> 
-          <a href="https://www.whatsapp.com"><img src="../assets/whatsapp.png" alt="logo whatsapp"></a></li>
-        <li> 
-          <a href="https://www.facebook.com"><img  src="../assets/facebook.png" alt="logo facebook"> </a> </li>
-        <li>
-          <a href="https://www.instagam.com"><img src="../assets/instagram.png" alt="logo instagram"> </a></li>
-      </ul>
-    </div>
-  </footer>
-  </html>
+</html>
